deploy/k8s-infra/session-lens/deployment-api.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: session-lens-api
  namespace: session-lens
  labels:
    app: session-lens
    component: api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: session-lens
      component: api
  template:
    metadata:
      labels:
        app: session-lens
        component: api
    spec:
      serviceAccountName: session-lens
      automountServiceAccountToken: false
      securityContext:
        runAsNonRoot: true
        runAsUser: 65532
        runAsGroup: 65532
        seccompProfile:
          type: RuntimeDefault
      containers:
        - name: api
          image: "ghcr.io/jmwri/session-lens:0.0.1" # {"$imagepolicy": "flux-system:session-lens"}
          imagePullPolicy: IfNotPresent
          command: ["session-lens", "api"]
          ports:
            - name: http
              containerPort: 8000
          resources:
            requests: {cpu: 50m, memory: 128Mi}
            limits: {cpu: "1", memory: 512Mi}
          securityContext:
            allowPrivilegeEscalation: false
            readOnlyRootFilesystem: true
            capabilities:
              drop: ["ALL"]
          readinessProbe:
            httpGet:
              path: /readyz
              port: http
            periodSeconds: 10
            timeoutSeconds: 4
          livenessProbe:
            httpGet:
              path: /healthz
              port: http
            periodSeconds: 30
          volumeMounts:
            - {name: tmp, mountPath: /tmp}
      volumes:
        - name: tmp
          emptyDir: {}
      terminationGracePeriodSeconds: 30
