deploy/k8s-infra/session-lens/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: session-lens
  namespace: session-lens
spec:
  ports:
    - port: 80
      targetPort: http
      name: http
  selector:
    app: session-lens
    component: api
